--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -2,6 +2,7 @@
 @import url('./reset.css');
 @import url('./fonts.css');
 @import url('./variables.css');
+@import url('./main.css');
 @import url('./daily-sports.css');
 @import url('./exercises.css');
 @import url('./footer.css');
