--- a/src/css/variables.css
+++ b/src/css/variables.css
@@ -12,6 +12,8 @@
   --rating-icon-color: #EEA10C;
   --exercise-text-color: rgba(36, 36, 36, 0.40);
 
+  --border-color: rgba(36, 36, 36, 1);
+
   --inactive-pagination-color: #D4D4D4;
   --modal-overlay-color: rgba(4, 4, 4, 0.40);
   --footer-policy-color: #C6CDD1;
