add category and exercises cards with styles and js markups functions

--- a/src/css/exercises.css
+++ b/src/css/exercises.css
@@ -12,7 +12,7 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  align-items: center;
+  align-items: flex-end;
   gap: 8px;
 }
 
@@ -30,6 +30,7 @@
   font-size: 20px;
   line-height: 1;
   letter-spacing: -0.4px;
+  padding-bottom: 5px;
 }
 
 .js-title-slash {
@@ -196,15 +197,12 @@
   }
 }
 
+
 .content {
   width: 100%;
   display: flex;
   flex-wrap: wrap;
-  gap: 15px;
-}
-
-.content.exercises {
-  gap: 16px;
+  gap: 20px;
 }
 
 @media screen and (min-width: 768px) {
@@ -226,6 +224,7 @@
     font-size: 24px;
     line-height: 1.33;
     letter-spacing: -0.48px;
+    padding-bottom: 0;
   }
 
   .filter-block {
@@ -257,6 +256,11 @@
     font-size: 16px;
     line-height: 1.5
   }
+
+  
+.content {
+  gap: 32px 16px;
+}
 }
 
 @media screen and (min-width: 1440px) {
@@ -277,6 +281,7 @@
     font-size: 20px;
     line-height: 1.0;
     letter-spacing: -0.4px; 
+    padding-bottom: 6px;
   }
 
   .filter-block {
