--- a/src/css/card_templates/category-card.css
+++ b/src/css/card_templates/category-card.css
@@ -1,4 +1,4 @@
-.category_wrap {
+.category-wrap {
   flex-basis: 100%;
   height: 225px;
   position: relative;
@@ -6,7 +6,7 @@
   border-radius: 12px;
 }
 
-.category_wrap::before {
+.category-wrap::before {
   content: '';
   width: 100%;
   height: 100%;
@@ -17,14 +17,14 @@
   left: 0;
 }
 
-.category_img {
+.category-img {
   display: block;
   width: 100%;
   height: 100%;
   object-fit: cover;
 }
 
-.category_text_wrap {
+.category-text-wrap {
   position: absolute;
   z-index: 3;
   top: 50%;
@@ -36,7 +36,7 @@
   align-items: center;
   gap: 2px;
 }
-.category_title {
+.category-title {
   color: var(--primary-light-color);
   text-align: center;
   text-transform: capitalize;
@@ -44,14 +44,14 @@
   line-height: 1;
 }
 
-.category_subtitle {
+.category-subtitle {
   color: var(--card-subtitle-color);
   font-size: 12px;
   line-height: 1.5;
 }
 
 @media screen and (min-width: 768px){
-  .category_wrap {
+  .category-wrap {
     max-width: calc((100% - 2 * 16px) / 3);
     position: relative;
     overflow: hidden;
@@ -60,12 +60,12 @@
 }
 
 @media screen and (min-width: 1440px) {
-  .category_wrap {
+  .category-wrap {
     max-width: calc((100% - 2 * 16px) / 3);
     height: 242px;
   }
 
-  .category_title {
+  .category-title {
     font-size: 24px;
     line-height: 1.5;
   }
