--- a/src/css/main.css
+++ b/src/css/main.css
@@ -13,6 +13,29 @@ body {
   padding-right: 20px;
 }
 
+.pagination {
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  gap: 8px;
+  padding-top: 32px;
+}
+
+.pagination .button {
+  background-color: transparent;
+  border: none;
+  border-radius: 50%;
+  color: var(--inactive-pagination-color);
+  padding: 0;
+}
+
+.pagination .active {
+  border: 1px solid var(--primary-dark-color);
+  color: var(--primary-dark-color);
+  height: 32px;
+  width: 32px;
+}
+
 @media screen and (min-width: 768px) {
     .container {
         max-width: 768px;
