--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -1,3 +1,240 @@
 .hero {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: auto;
+  gap: 20px;
+  margin-bottom: 40px;
+}
 
+.hero-text-container {
+  grid-column: 1 / span 1;
+  grid-row: 1;
+
+  width: 100%;
+  color: var(--primary-dark-color);
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  gap: 20px;
+}
+
+.hero-title {
+  font-size: 38px;
+  line-height: 1.16;
+  letter-spacing: -0.76px;
+  font-weight: 400;
+
+  .title-italic {
+    font-style: italic;
+  }
+
+  .hero-icon {
+    width: 38px;
+    height: 38px;
+    fill: currentColor;
+  }
+}
+.hero-text {
+  width: 100%;
+  font-size: 14px;
+  line-height: 1.29;
+  letter-spacing: -0.28px;
+}
+
+.hero-content-img {
+  display: none;
+}
+
+.hero-tags-container {
+  grid-column: 1 / span 1;
+  grid-row: 3;
+  width: 100%;
+}
+
+.tag-list {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.tag-item {
+  padding: 4px 12px;
+  border-radius: 30px;
+  border: 1px solid var(--primary-dark-color);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  font-size: 14px;
+  line-height: 1.29;
+}
+
+.hero-img {
+  grid-column: 1 / span 1;
+  grid-row: 2;
+  width: 100%;
+  height: 460px;
+  background-position: top center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  border-radius: 30px;
+
+  background-image: image-set(
+    url('../assets/images/avif/hero-mob.avif') type('image/avif'),
+    url('../assets/images/webp/hero-mob.webp') type('image/webp'),
+    url('../assets/images/jpg/hero-mob.jpg') type('image/jpeg')
+  );
+}
+
+@media (min-resolution: 192dpi) {
+  .hero-img {
+    background-image: image-set(
+      url('../assets/images/avif/hero-mob-2x.avif') type('image/avif'),
+      url('../assets/images/webp/hero-mob-2x.webp') type('image/webp'),
+      url('../assets/images/jpg/hero-mob-2x.jpg') type('image/jpeg')
+    );
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .hero {
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: auto;
+    gap: 16px;
+    margin-bottom: 64px;
+  }
+
+  .hero-text-container {
+    width: 639px;
+    grid-column: 1 / span 2;
+    grid-row: 1;
+    padding-bottom: 16px;
+  }
+
+  .hero-title {
+    font-size: 74px;
+    font-weight: 400;
+    line-height: 1;
+    letter-spacing: -1.48px;
+
+    .hero-icon {
+      width: 59px;
+      height: 59px;
+    }
+  }
+
+  .hero-text {
+    max-width: 528px;
+    font-size: 18px;
+    line-height: 1.33;
+    letter-spacing: -0.36px;
+  }
+
+  .hero-tags-container {
+    width: 400px;
+    grid-column: 1 / span 2;
+    grid-row: 3;
+    margin-left: 304px;
+  }
+
+  .tag-list {
+    gap: 8px;
+  }
+
+  .tag-item {
+    padding: 4px 16px;
+    font-size: 16px;
+    line-height: 1.5;
+  }
+
+  .hero-img {
+    grid-column: 1 / span 2;
+    grid-row: 2;
+    height: 550px;
+    border-radius: 60px;
+    background-image: image-set(
+      url('../assets/images/avif/hero-tab.avif') type('image/avif'),
+      url('../assets/images/webp/hero-tab.webp') type('image/webp'),
+      url('../assets/images/jpg/hero-tab.jpg') type('image/jpeg')
+    );
+  }
+
+  @media (min-resolution: 192dpi) {
+    .hero-img {
+      background-image: image-set(
+        url('../assets/images/avif/hero-tab-2x.avif') type('image/avif'),
+        url('../assets/images/webp/hero-tab-2x.webp') type('image/webp'),
+        url('../assets/images/jpg/hero-tab-2x.jpg') type('image/jpeg')
+      );
+    }
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .hero {
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: auto auto;
+    gap: 32px;
+  }
+
+  .hero-text-container {
+    grid-column: 1 / span 1;
+    grid-row: 1;
+    padding-bottom: 0;
+  }
+
+  .hero-tags-container {
+    grid-column: 3 / span 1;
+    grid-row: 1;
+    margin-left: 161px;
+
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-items: flex-end;
+    justify-content: flex-end;
+    gap: 32px;
+    width: 199px;
+  }
+
+  .tag-list {
+    justify-content: flex-end;
+    gap: 8px;
+  }
+
+  .tag-item {
+    align-items: center;
+    justify-content: center;
+  }
+
+  .hero-content-img {
+    display: block;
+    width: 168px;
+    height: 100px;
+    border-radius: 20px;
+    overflow: hidden;
+  }
+
+  .hero-img {
+    grid-column: 1 / span 3;
+    grid-row: 2;
+    height: 350px;
+    background-image: image-set(
+      url('../assets/images/avif/hero-desktop.avif') type('image/avif'),
+      url('../assets/images/webp/hero-desktop.webp') type('image/webp'),
+      url('../assets/images/jpg/hero-desktop.jpg') type('image/jpeg')
+    );
+  }
+
+  @media (min-resolution: 192dpi) {
+    .hero-img {
+      background-image: image-set(
+        url('../assets/images/avif/hero-desktop-2x.avif') type('image/avif'),
+        url('../assets/images/webp/hero-desktop-2x.webp') type('image/webp'),
+        url('../assets/images/jpg/hero-desktop-2x.jpg') type('image/jpeg')
+      );
+    }
+  }
 }
