--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -1,3 +1,111 @@
 .footer {
-  display: block; /* placeholder */
+  background-color: #111;
+  color: #fff;
+  padding: 20px;
+  text-align: center;
+}
+
+.footer__container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.footer__left, .footer__right {
+  margin-bottom: 20px;
+}
+
+.footer__brand {
+  margin-bottom: 10px;
+}
+
+.footer__brand h2 {
+  font-size: 1.5rem;
+  margin-bottom: 10px;
+}
+
+.footer__social a {
+  margin: 0 5px;
+}
+
+.footer__social img {
+  width: 24px;
+  height: 24px;
+}
+
+.footer__right h2 {
+  font-size: 1.25rem;
+  margin-bottom: 10px;
+}
+
+.footer__right span {
+  font-style: italic;
+}
+
+.footer__subscribe {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.footer__subscribe input {
+  padding: 10px;
+  margin-bottom: 10px;
+  width: 80%;
+  max-width: 300px;
+}
+
+.footer__subscribe button {
+  padding: 10px 20px;
+  background-color: #fff;
+  color: #111;
+  border: none;
+  cursor: pointer;
+}
+
+@media (min-width: 600px) {
+  .footer__container {
+    flex-direction: row;
+    justify-content: space-between;
+  }
+
+  .footer__left, .footer__right {
+    margin-bottom: 0;
+  }
+
+  .footer__right h2 {
+    font-size: 1.75rem;
+  }
+
+  .footer__subscribe {
+    flex-direction: row;
+  }
+
+  .footer__subscribe input {
+    margin-right: 10px;
+    margin-bottom: 0;
+  }
+}
+
+@media (min-width: 900px) {
+  .footer {
+    padding: 40px;
+  }
+
+  .footer__brand h2 {
+    font-size: 2rem;
+  }
+
+  .footer__right h2 {
+    font-size: 2rem;
+  }
+
+  .footer__social img {
+    width: 32px;
+    height: 32px;
+  }
+
+  .footer__subscribe input {
+    width: 300px;
+  }
 }
