--- a/src/css/variables.css
+++ b/src/css/variables.css
@@ -18,4 +18,5 @@
   --inactive-pagination-color: #D4D4D4;
   --modal-overlay-color: rgba(4, 4, 4, 0.40);
   --footer-policy-color: #C6CDD1;
+  --light-grey: rgba(244, 244, 244, 0.60);
 }
