--- a/src/partials/exercises.html
+++ b/src/partials/exercises.html
@@ -31,9 +31,9 @@
             </form>
             
             <ul class="list-filter-exersises">
-                <li class="item-filter-exersises"><button class="btn-filter active" data-btn="muscles" type="button">Muscles</button></li>
-                <li class="item-filter-exersises"><button class="btn-filter" data-btn="bodypart" type="button">Body parts</button></li>
-                <li class="item-filter-exersises"><button class="btn-filter" data-btn="equipment" type="button">Equipment</button></li>
+                <li class="item-filter-exersises"><button class="btn-filter active" data-category="Muscles" type="button">Muscles</button></li>
+                <li class="item-filter-exersises"><button class="btn-filter" data-category="Body parts" type="button">Body parts</button></li>
+                <li class="item-filter-exersises"><button class="btn-filter" data-category="Equipment" type="button">Equipment</button></li>
             </ul>
         </div>
     </div>
