--- a/src/partials/daily-sports.html
+++ b/src/partials/daily-sports.html
@@ -60,12 +60,70 @@
     <img src="../assets/images/jpg/quote-img-tab.jpg " loading="lazy" />
   </picture>
 
+  <picture class="photo quote-img-desk">
+    <source
+      srcset="
+        /assets/images/avif/quote-img-2x.avif 2x,
+        /assets/images/avif/quote-img.avif    1x
+      "
+      type="image/avif"
+    />
+    <source
+      srcset="
+        /assets/images/webp/quote-img-2x.webp 2x,
+        /assets/images/webp/quote-img.webp    1x
+      "
+      type="image/webp"
+    />
+    <source
+      srcset="
+        /assets/images/jpg/quote-img-2x.jpg 2x,
+        /assets/images/jpg/quote-img.jpg    1x
+      "
+      type="image/img"
+    />
+    <img src="../assets/images/jpg/quote-img.jpg " loading="lazy" />
+  </picture>
+
+  <picture class="photo favorite">
+    <source
+      srcset="
+        /assets/images/avif/quote-img-fav-2x.avif 2x,
+        /assets/images/avif/quote-img-fav.avif    1x
+      "
+      type="image/avif"
+    />
+    <source
+      srcset="
+        /assets/images/webp/quote-img-fav-2x.webp 2x,
+        /assets/images/webp/quote-img-fav.webp    1x
+      "
+      type="image/webp"
+    />
+    <source
+      srcset="
+        /assets/images/jpg/quote-img-fav-2x.jpg 2x,
+        /assets/images/jpg/quote-img-fav.jpg    1x
+      "
+      type="image/img"
+    />
+    <img src="../assets/images/jpg/quote-img-fav.jpg " loading="lazy" />
+  </picture>
+
   <div class="daily-excercise">
     <span class="icon-weight"></span>
     <div>
       <h3 class="excercise-title">110 min</h3>
       <h3 class="excercise-sub">Daily norm of sports</h3>
-      <p class="excercise-text">The World Health Organization recommends at least 150 minutes of moderate-intensity aerobic physical activity throughout the week for adults aged 18-64. However, what happens if we adjust that number to 110 minutes every day? While it might seem like a high number to hit, dedicating 110 minutes daily to sporting activities may offer unparalleled benefits to physical health, mental well-being, and overall quality of life.</p>
+      <p class="excercise-text">
+        The World Health Organization recommends at least 150 minutes of
+        moderate-intensity aerobic physical activity throughout the week for
+        adults aged 18-64. However, what happens if we adjust that number to 110
+        minutes every day? While it might seem like a high number to hit,
+        dedicating 110 minutes daily to sporting activities may offer
+        unparalleled benefits to physical health, mental well-being, and overall
+        quality of life.
+      </p>
     </div>
   </div>
 </section>
