--- a/src/partials/daily-sport.html
+++ b/src/partials/daily-sport.html
@@ -1,13 +1,15 @@
-<section class="section daily-sport-section">
+<section class="daily-sport-section">
   <div class="quote">
     <div class="quote-container">
-      <span class="icon-runner"></span>
+      <span class="icon-runner circle-icon"></span>
       <div>
-        <h3 class="quote-title">Quote of the day</h3>
+        <h3 class="quote-title">
+          Quote of the day
+          <span class="icon-quotation quotation-mark"></span>
+        </h3>
         <p class="quote-text"></p>
         <p class="quote-author"></p>
       </div>
-      <span class="icon-quotation"></span>
     </div>
   </div>
   <picture class="photo quote-img-mobile">
@@ -32,7 +34,7 @@
       "
       type="image/img"
     />
-    <img src="../assets/images/jpg/quote-img-mob.jpg " loading="lazy" />
+    <img src="../assets/images/jpg/quote-img-mob.jpg " loading="lazy" class="quote-img" />
   </picture>
 
   <picture class="photo quote-img-tab">
@@ -57,7 +59,7 @@
       "
       type="image/img"
     />
-    <img src="../assets/images/jpg/quote-img-tab.jpg " loading="lazy" />
+    <img src="../assets/images/jpg/quote-img-tab.jpg " loading="lazy" class="quote-img" />
   </picture>
 
   <picture class="photo quote-img-desk">
@@ -82,10 +84,10 @@
       "
       type="image/img"
     />
-    <img src="../assets/images/jpg/quote-img.jpg " loading="lazy" />
+    <img src="../assets/images/jpg/quote-img.jpg " loading="lazy" class="quote-img" />
   </picture>
 
-  <picture class="photo favorite">
+  <picture class="photo quote-img-favorite">
     <source
       srcset="
         /assets/images/avif/quote-img-fav-2x.avif 2x,
@@ -107,11 +109,11 @@
       "
       type="image/img"
     />
-    <img src="../assets/images/jpg/quote-img-fav.jpg " loading="lazy" />
+    <img src="../assets/images/jpg/quote-img-fav.jpg " loading="lazy" class="quote-img" />
   </picture>
 
   <div class="daily-excercise">
-    <span class="icon-weight"></span>
+    <span class="icon-weight circle-icon"></span>
     <div>
       <h3 class="excercise-title">110 min</h3>
       <h3 class="excercise-sub">Daily norm of sports</h3>
