--- a/src/css/main.css
+++ b/src/css/main.css
@@ -4,11 +4,13 @@ html {
 
 body {
   background-color: var(--primary-light-color);
+  font-family: "DM Sans", sans-serif;
+  font-optical-sizing: auto;
 }
 
 .container {
-  max-width: 375px;
   margin: 0 auto;
+  max-width: 1440px;
   padding-left: 20px;
   padding-right: 20px;
 }
@@ -40,14 +42,18 @@ body {
 
 @media screen and (min-width: 768px) {
     .container {
-        max-width: 768px;
         padding-left: 32px;
         padding-right: 32px;
     }
 }
 
 @media screen and (min-width: 1440px) {
-    .container {
-        max-width: 1440px;
-    }
+  .main-layout {
+    display: flex;
+    gap: 32px;
+  }
+
+  body:not(.favourites) .main-layout {
+    flex-direction: row-reverse;
+  }
 }
