--- a/src/partials/exercises.html
+++ b/src/partials/exercises.html
@@ -6,37 +6,7 @@
  data-btn="muscles", data-btn="bodypart", data-btn="equipment" - current category for API
 -->
 
-<section class="exersises container">
-    <div class="content-filter-container">
-        <div class="filter-title-container">
-            <p class="filter-title">Exercises <span class="js-title-slash is-hide">/</span></p>
-            <p class="filter-subtitle"></p>
-        </div>
-        <div class="filter-block">
-            <form class="form-search-exersises is-hide" >
-                <input class="input-search-exersises" name="search" type="text" placeholder="Search">
-                </input>
-                <div class="btn-search-wrapper">
-                    <button class="btn-search-exersises is-hide js-clear-input" type="button">
-                        <svg class="icon-x" width="18" height="18">
-                            <use href="/img/icons.svg#icon-x"></use>
-                        </svg>
-                    </button>
-                    <button class="btn-search-exersises" type="submit">
-                        <svg class="icon-search" width="18" height="18">
-                            <use href="./img/icons.svg#icon-search"></use>
-                        </svg>
-                    </button>
-                </div>
-            </form>
-            
-            <ul class="list-filter-exersises">
-                <li class="item-filter-exersises"><button class="btn-filter active" data-btn="muscles" type="button">Muscles</button></li>
-                <li class="item-filter-exersises"><button class="btn-filter" data-btn="bodypart" type="button">Body parts</button></li>
-                <li class="item-filter-exersises"><button class="btn-filter" data-btn="equipment" type="button">Equipment</button></li>
-            </ul>
-        </div>
-    </div>
+<section class="exersises">
     
     <div class="content"></div>
 
