--- a/src/css/favorites.css
+++ b/src/css/favorites.css
@@ -1,53 +1,53 @@
-.favourites .main-layout {
+.favorites .main-layout {
   display: flex;
   flex-direction: column-reverse;
   row-gap: 40px;
 }
 
-.favourites .daily-sport-section {
+.favorites .daily-sport-section {
   margin-top: 0;
 }
 
-.favourites .quote-img-favorite {
+.favorites .quote-img-favorite {
   display: block;
 }
 
-.favourites .quote-img-mobile {
+.favorites .quote-img-mobile {
   display: none;
 }
 
-.favourites .photo {
+.favorites .photo {
   grid-column: 1;
   grid-row: 3;
   order: 3;
 }
 
-.favourites .daily-excercise {
+.favorites .daily-excercise {
   grid-column: 1;
   grid-row: 2;
   order: 2;
   height: auto;
 }
 
-.favourites .excercise-text {
+.favorites .excercise-text {
   display: none;
 }
 
 @media screen and (min-width: 768px) {
-  .favourites .daily-sport-section {
+  .favorites .daily-sport-section {
     grid-template-columns: 1fr 1fr;
     row-gap: 16px;
   }
 
-  .favourites .quote-img-tab {
+  .favorites .quote-img-tab {
     display: none;
   }
 
-  .favourites .quote {
+  .favorites .quote {
     grid-column: 1 / -1;
   }
 
-  .favourites .photo {
+  .favorites .photo {
     grid-column: 2;
     grid-row: 2;
     order: 3;
@@ -55,7 +55,7 @@
     width: 100%;
   }
   
-  .favourites .daily-excercise {
+  .favorites .daily-excercise {
     grid-column: 1;
     grid-row: 2;
     order: 2;
@@ -63,15 +63,15 @@
 }
 
 @media screen and (min-width: 1440px) {
-  .favourites .main-layout {
+  .favorites .main-layout {
     flex-direction: row-reverse;
   }
 
-  .favourites .daily-sport-section {
+  .favorites .daily-sport-section {
     column-gap: 16px;
   }
 
-  .favourites .quote-img-desk {
+  .favorites .quote-img-desk {
     display: none;
   }
 }
