--- a/src/css/main.css
+++ b/src/css/main.css
@@ -53,7 +53,7 @@ body {
     gap: 32px;
   }
 
-  body:not(.favourites) .main-layout {
+  body:not(.favorites) .main-layout {
     flex-direction: row-reverse;
   }
 }
