--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -63,7 +63,7 @@
   cursor: pointer;
 }
 
-@media (min-width: 600px) {
+@media screen and (min-width: 768px) {
   .footer__container {
     flex-direction: row;
     justify-content: space-between;
@@ -87,7 +87,7 @@
   }
 }
 
-@media (min-width: 900px) {
+@media screen and (min-width: 1440px) {
   .footer {
     padding: 40px;
   }
