--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,27 +1,35 @@
 <footer class="footer">
-  <div class="footer__container">
-    <div class="footer__left">
-      <div class="footer__brand">
-        <h2>YOUR ENERGY</h2>
-        <div class="footer__social">
-          <a href="#"><img src="path/to/facebook-icon.png" alt="Facebook" /></a>
-          <a href="#"
-            ><img src="path/to/instagram-icon.png" alt="Instagram"
-          /></a>
-          <a href="#"><img src="path/to/youtube-icon.png" alt="YouTube" /></a>
+  <section class="footer-container container">
+    <div class="footer-left">
+      <div class="footer-brand">
+        <h2 class="footer-brand-name">YOUR ENERGY</h2>
+
+        <div class="footer-social social">
+          <a class="footer-social-link" href="#"><img class="footer-social-img" src="#" alt="Facebook" /></a>
+          <a class="footer-social-link" href="#"><img class="footer-social-img" src="#" alt="Instagram"/></a>
+          <a class="footer-social-link" href="#"><img class="footer-social-img" src="#" alt="YouTube" /></a>
         </div>
       </div>
-      <p>Your Energy. All rights reserved.</p>
-      <p><a href="#">Privacy Policy</a> / <a href="#">Terms of Service</a></p>
     </div>
-    <div class="footer__right">
-      <h2>Transforming your <span>body</span> shape with us</h2>
-      <p>Subscribe and learn about new exercises!</p>
-      <form class="footer__subscribe">
-        <input type="email" placeholder="Email" />
-        <button type="submit">Send</button>
+
+    <div class="footer-right">
+      <div class="title-wrapper">
+        <h2 class="footer-title">Transforming your <span>body</span> shape with us</h2>
+
+        <p class="footer-subtitle">Subscribe and learn about new exercises!</p>
+      </div>
+
+      <form class="footer-form">
+        <input class="footer-form-input" type="email" placeholder="Email" />
+
+        <button class="footer-form-button" type="submit">Send</button>
       </form>
-      <p>&copy;2023</p>
     </div>
-  </div>
+
+    <div class="footer-copyright">
+      <p class="footer-copyright-item">Your Energy. All rights reserved.</p>
+      <p class="footer-copyright-item"><a href="#">Privacy Policy</a> / <a href="#">Terms of Service</a></p>
+      <p class="footer-copyright">&copy;2023</p>
+    </div>
+  </section>
 </footer>
