--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -15,27 +15,24 @@
     <picture class="hero-content-img">
       <source
         srcset="
-          /assets/images/avif/small-preview.avif    1x,
-          /assets/images/avif/small-preview-2x.avif 2x
-        "
+          /assets/images/avif/small-preview.avif 1x,
+          /assets/images/avif/small-preview-2x.avif 2x"
         type="image/avif"
       />
       <source
         srcset="
-          /assets/images//webp/small-preview.webp   1x,
-          /assets/images/avif/small-preview-2x.webp 2x
-        "
+          /assets/images/webp/small-preview.webp 1x,
+          /assets/images/webp/small-preview-2x.webp 2x"
         type="image/webp"
       />
       <source
         srcset="
-          /assets/images/jpg/small-preview.jpg    1x,
-          /assets/images/jpg/small-preview-2x.jpg 2x
-        "
+          /assets/images/jpg/small-preview.jpg 1x,
+          /assets/images/jpg/small-preview-2x.jpg 2x"
         type="image/img"
       />
       <img
-        src="/assets/images/jpg/small-preview-2x.jpg"
+        src="/assets/images/jpg/small-preview.jpg"
         alt="happy leg to happy leg"
         width="168"
         height="100"
