--- a/src/css/main.css
+++ b/src/css/main.css
@@ -4,7 +4,7 @@ html {
 
 body {
   background-color: var(--primary-light-color);
-  font-family: "DM Sans", sans-serif;
+  font-family: 'DM Sans', sans-serif;
 }
 
 .container {
@@ -36,6 +36,30 @@ body {
   cursor: auto;
   height: 32px;
   width: 32px;
+}
+
+.logo {
+  width: 132px;
+  height: 24px;
+}
+
+.social {
+  display: flex;
+  gap: 12px;
+}
+
+.social-link {
+  border-radius: 10px;
+  border: 1px solid rgba(244, 244, 244, 0.10);
+  display: inline-flex;
+  padding: 8px;
+  align-items: center;
+  gap: 8px;
+}
+
+.social-icon {
+  width: 28px;
+  height: 28px;
 }
 
 @media screen and (min-width: 768px) {
