--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,6 +1,7 @@
 @import 'modern-normalize';
 @import url('./reset.css');
 @import url('./fonts.css');
+@import url('./icons.css');
 @import url('./variables.css');
 @import url('./main.css');
 @import url('./daily-sports.css');
