--- a/src/css/main.css
+++ b/src/css/main.css
@@ -5,6 +5,7 @@ html {
 body {
   background-color: var(--primary-light-color);
   font-family: 'DM Sans', sans-serif;
+  font-weight: 400;
 }
 
 .container {
@@ -54,7 +55,6 @@ body {
   display: inline-flex;
   padding: 8px;
   align-items: center;
-  gap: 8px;
 }
 
 .social-icon {
