fix footer logo path

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -4,7 +4,7 @@
       <h2 class="footer-brand-name">
         <a href="#">
           <svg width="132" height="24" viewBox="0 0 132 14" id="logo" class="footer-logo logo">
-            <use href="./img/logo.svg#logo"></use>
+            <use href="./img/icons.svg#logo"></use>
           </svg>
         </a>
       </h2>
