--- a/src/partials/exercises.html
+++ b/src/partials/exercises.html
@@ -1,4 +1,4 @@
-<!-- 
+<!--
  Element: js-title-slash - remove class is-hide to show slash / in section title
  Element: form-search-exersises  - remove class is-hide to show form
  Element: js-clear-input - remove class is-hide to show X sign to clear input
@@ -24,12 +24,12 @@
                     </button>
                     <button class="btn-search-exersises" type="submit">
                         <svg class="icon-search" width="18" height="18">
-                            <use href="./img/icons.svg#icon-search"></use>
+                            <use href="./images/icons.svg#icon-search"></use>
                         </svg>
                     </button>
                 </div>
             </form>
-            
+
             <ul class="list-filter-exersises">
                 <li class="item-filter-exersises"><button class="btn-filter active" data-category="Muscles" data-exercise="muscles" type="button">Muscles</button></li>
                 <li class="item-filter-exersises"><button class="btn-filter" data-category="Body parts" data-exercise="bodypart">Body parts</button></li>
@@ -37,7 +37,7 @@
             </ul>
         </div>
     </div>
-    
+
     <div class="content"></div>
 
     <div class="pagination"></div>
