--- a/src/css/exercises.css
+++ b/src/css/exercises.css
@@ -138,8 +138,8 @@
   transition-timing-function: ease-in;
 }
 
-.icon-search,
-.icon-x {
+.btn-search-wrapper .icon-search,
+.btn-search-wrapper .icon-x {
   display: block;
   position: absolute;
   top: 0;
@@ -152,7 +152,7 @@
   stroke: currentColor;
 }
 
-.icon-x {
+.btn-search-wrappe .icon-x {
   padding: 4px;
   fill: currentColor;
   stroke: currentColor;
