--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,1 +1,72 @@
-<section class="header">header</section>
+<header class="header">
+  <div class="container">
+    <div class="header-wrapper">
+      <a href="./index.html" class="header-logo">
+        <svg class="header-logo-icon" width="132" height="24">
+          <use href="./images/icons.svg#logo"></use>
+        </svg>
+      </a>
+
+      <button
+        class="menu-toggle js-open-menu"
+        aria-expanded="false"
+        aria-controls="mobile-menu"
+        aria-label="Open menu"
+      >
+        <svg class="burger-icon" width="32" height="32">
+          <use href="./images/icons.svg#icon-burger"></use>
+        </svg>
+      </button>
+
+        <nav class="nav">
+          <ul class="toggle-container">
+            <li class="toggle-btn toggle-btn-home active">
+              <a href="./index.html" class="nav-link toggle-btn-home">Home</a>
+            </li>
+            <li class="toggle-btn toggle-btn-favorites">
+              <a href="./favorites.html" class="nav-link toggle-btn-favorites"
+                >Favorites</a
+              >
+            </li>
+          </ul>
+        </nav>
+
+        <ul class="social">
+          <li class="social-link">
+            <a
+              href="https://www.facebook.com/goITclub/"
+              class="social-media"
+              target="_blank"
+            >
+              <svg class="social-icon" width="28" height="28">
+                <use href="./images/icons.svg#facebook"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social-link">
+            <a
+              href="https://www.instagram.com/goitclub/ "
+              class="social-media"
+              target="_blank"
+            >
+              <svg class="social-icon" width="28" height="28">
+                <use href="./images/icons.svg#instagram"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social-link">
+            <a
+              href="https://www.youtube.com/c/GoIT"
+              class="social-media"
+              target="_blank"
+            >
+              <svg class="social-icon" width="28" height="28">
+                <use href="./images/icons.svg#youtube"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</header>
