--- a/src/partials/exercises.html
+++ b/src/partials/exercises.html
@@ -19,7 +19,7 @@
                 <div class="btn-search-wrapper">
                     <button class="btn-search-exersises is-hide js-clear-input" type="button">
                         <svg class="icon-x" width="18" height="18">
-                            <use href="/img/icons.svg#icon-x"></use>
+                            <use href="/images/icons.svg#icon-x"></use>
                         </svg>
                     </button>
                     <button class="btn-search-exersises" type="submit">
