fix Exercises title, hero alighment and main container size

--- a/src/partials/exercises.html
+++ b/src/partials/exercises.html
@@ -1,14 +1,4 @@
-<!--
- Element: js-title-slash - remove class is-hide to show slash / in section title
- Element: form-search-exersises  - remove class is-hide to show form
- Element: js-clear-input - remove class is-hide to show X sign to clear input
- Element: btn-filter- toggle class active to show active category
- data-btn="muscles", data-btn="bodypart", data-btn="equipment" - current category for API
--->
-
-<section class="exersises container">
-
-    <div class="content"></div>
-
-    <div class="pagination"></div>
+<section class="exersises">
+  <div class="content"></div>
+  <div class="pagination"></div>
 </section>
