--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -2,19 +2,19 @@
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: auto;
-  gap: 20px;
+  margin: 0 auto;
   margin-bottom: 40px;
 }
 
 .hero-text-container {
   grid-column: 1 / span 1;
   grid-row: 1;
-  width: 100%;
   color: var(--primary-dark-color);
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
   gap: 20px;
+  margin-bottom: 20px;
 }
 
 .hero-title {
@@ -33,8 +33,9 @@
     fill: currentColor;
   }
 }
+
 .hero-text {
-  width: 100%;
+  max-width: 335px;
   font-size: 14px;
   line-height: 1.29;
   letter-spacing: -0.28px;
@@ -47,7 +48,7 @@
 .hero-tags-container {
   grid-column: 1 / span 1;
   grid-row: 3;
-  width: 100%;
+  max-width: 335px;
 }
 
 .tag-list {
@@ -55,11 +56,12 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  gap: 8px;
   justify-content: space-between;
 }
 
 .tag-item {
-  padding: 4px 12px;
+  padding: 4px 11px;
   border-radius: 30px;
   border: 1px solid var(--primary-dark-color);
   display: flex;
@@ -72,13 +74,12 @@
 .hero-img {
   grid-column: 1 / span 1;
   grid-row: 2;
-  width: 100%;
   height: 460px;
   background-position: top center;
   background-repeat: no-repeat;
   background-size: cover;
   border-radius: 30px;
-
+  margin-bottom: 24px;
   background-image: image-set(
     url('../assets/images/avif/hero-mob.avif') type('image/avif'),
     url('../assets/images/webp/hero-mob.webp') type('image/webp'),
@@ -100,7 +101,6 @@
   .hero {
     grid-template-columns: 1fr 1fr;
     grid-template-rows: auto;
-    gap: 16px;
     margin-bottom: 64px;
   }
 
@@ -108,7 +108,7 @@
     width: 639px;
     grid-column: 1 / span 2;
     grid-row: 1;
-    padding-bottom: 16px;
+    margin-bottom: 32px;
   }
 
   .hero-title {
@@ -131,18 +131,20 @@
   }
 
   .hero-tags-container {
-    width: 400px;
+    max-width: 100%;
     grid-column: 1 / span 2;
     grid-row: 3;
-    margin-left: 304px;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
   }
 
   .tag-list {
-    gap: 8px;
+    justify-content: flex-end;
   }
 
   .tag-item {
-    padding: 4px 16px;
+    padding: 4px 15px;
     font-size: 16px;
     line-height: 1.5;
   }
@@ -152,6 +154,7 @@
     grid-row: 2;
     height: 550px;
     border-radius: 60px;
+    margin-bottom: 16px;
     background-image: image-set(
       url('../assets/images/avif/hero-tab.avif') type('image/avif'),
       url('../assets/images/webp/hero-tab.webp') type('image/webp'),
@@ -160,15 +163,15 @@
   }
 }
 
-  @media screen and (min-width: 768px) and (min-resolution: 192dpi) {
-    .hero-img {
-      background-image: image-set(
-        url('../assets/images/avif/hero-tab-2x.avif') type('image/avif'),
-        url('../assets/images/webp/hero-tab-2x.webp') type('image/webp'),
-        url('../assets/images/jpg/hero-tab-2x.jpg') type('image/jpeg')
-      );
-    }
+@media screen and (min-width: 768px) and (min-resolution: 192dpi) {
+  .hero-img {
+    background-image: image-set(
+      url('../assets/images/avif/hero-tab-2x.avif') type('image/avif'),
+      url('../assets/images/webp/hero-tab-2x.webp') type('image/webp'),
+      url('../assets/images/jpg/hero-tab-2x.jpg') type('image/jpeg')
+    );
   }
+}
 
 @media screen and (min-width: 1440px) {
   .hero {
@@ -180,25 +183,23 @@
   .hero-text-container {
     grid-column: 1 / span 1;
     grid-row: 1;
-    padding-bottom: 0;
+    margin-bottom: 0;
   }
 
   .hero-tags-container {
     grid-column: 3 / span 1;
     grid-row: 1;
-    margin-left: 160px;
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
     align-items: flex-end;
     justify-content: flex-end;
     gap: 32px;
-    width: 200px;
+    width: 100%;
   }
 
   .tag-list {
-    justify-content: flex-end;
-    gap: 8px;
+    max-width: 197px;
   }
 
   .tag-item {
@@ -218,6 +219,7 @@
     grid-column: 1 / span 3;
     grid-row: 2;
     height: 350px;
+    margin-bottom: 0;
     background-image: image-set(
       url('../assets/images/avif/hero-desktop.avif') type('image/avif'),
       url('../assets/images/webp/hero-desktop.webp') type('image/webp'),
@@ -227,11 +229,11 @@
 }
 
 @media screen and (min-width: 1440px) and (min-resolution: 192dpi) {
-    .hero-img {
-      background-image: image-set(
-        url('../assets/images/avif/hero-desktop-2x.avif') type('image/avif'),
-        url('../assets/images/webp/hero-desktop-2x.webp') type('image/webp'),
-        url('../assets/images/jpg/hero-desktop-2x.jpg') type('image/jpeg')
-      );
-    }
+  .hero-img {
+    background-image: image-set(
+      url('../assets/images/avif/hero-desktop-2x.avif') type('image/avif'),
+      url('../assets/images/webp/hero-desktop-2x.webp') type('image/webp'),
+      url('../assets/images/jpg/hero-desktop-2x.jpg') type('image/jpeg')
+    );
+  }
 }
