--- a/src/css/main.css
+++ b/src/css/main.css
@@ -10,7 +10,7 @@ body {
 
 .container {
   margin: 0 auto;
-  max-width: 1440px;
+  max-width: 375px;
   padding-left: 20px;
   padding-right: 20px;
 }
@@ -64,6 +64,7 @@ body {
 
 @media screen and (min-width: 768px) {
     .container {
+        max-width: 768px;
         padding-left: 32px;
         padding-right: 32px;
     }
@@ -77,6 +78,7 @@ body {
 
   body:not(.favorites) .main-layout {
     flex-direction: row-reverse;
+    justify-content: flex-end;
   }
   
   .container {
