--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -15,20 +15,23 @@
     <picture class="hero-content-img">
       <source
         srcset="
-          /assets/images/avif/small-preview.avif 1x,
-          /assets/images/avif/small-preview-2x.avif 2x"
+          /assets/images/avif/small-preview.avif    1x,
+          /assets/images/avif/small-preview-2x.avif 2x
+        "
         type="image/avif"
       />
       <source
         srcset="
-          /assets/images/webp/small-preview.webp 1x,
-          /assets/images/webp/small-preview-2x.webp 2x"
+          /assets/images/webp/small-preview.webp    1x,
+          /assets/images/webp/small-preview-2x.webp 2x
+        "
         type="image/webp"
       />
       <source
         srcset="
-          /assets/images/jpg/small-preview.jpg 1x,
-          /assets/images/jpg/small-preview-2x.jpg 2x"
+          /assets/images/jpg/small-preview.jpg    1x,
+          /assets/images/jpg/small-preview-2x.jpg 2x
+        "
         type="image/img"
       />
       <img
