--- a/src/partials/exercises.html
+++ b/src/partials/exercises.html
@@ -37,7 +37,9 @@
             </ul>
         </div>
     </div>
-
+    <p class="loader-text">
+        <span class="loader"> </span> Please wait. Data loading...
+    </p>
     <div class="content"></div>
 
     <div class="pagination"></div>
