--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -13,3 +13,4 @@
 @import url('./hero.css');
 @import url('./modal-exercise.css');
 @import url('./favorites.css');
+@import url('./scroll-to-top.css');
