--- a/src/partials/modal-exercise.html
+++ b/src/partials/modal-exercise.html
@@ -2,7 +2,7 @@
   <div class="modal-window">
     <span class="close-button icon-x" id="closeButton"></span>
     <div class="exercise-wrapper">
-      <img src="" alt="" class="exercise-image">
+      <img src="" alt="" class="exercise-image" loading="lazy">
       <div class="exercise-details">
         <div class="exercise-header">
           <h2></h2>
